5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_2442.log
== SUBMITION (2019-04-09 16:03:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.133489
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 8
    mensagem = "Par"
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:04:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(num)

-- EXECUTION TIME:
0.17321
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(num)

-- EXECUTION TIME:
0.152557
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:05:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.185043
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:05:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if num % 2 == 0 :
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.144694
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if num % 2 == 0 :
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if num % 2 == 0 :
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.221651
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if num % 2 == 0 :
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if num % 2 == 0 :
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.239834
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if num % 2 == 0 :
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:06:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if num % 2 == 0:
	 "par"
else:
	"impar"

print(mensagem)

-- EXECUTION TIME:
0.237982
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if num % 2 == 0:
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if num % 2 == 0:
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if num % 2 == 0:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2) == 0:
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2) == 0:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2) = 0:
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2) = 0:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:09:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.205154
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.219957
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:10:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if: (num % 2 == 0)
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.128971
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if: (num % 2 == 0)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:10:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else(num % == 1:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.180094
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:10:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else(num % == 1):
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.162052
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:11:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0) :
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0) :
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:12:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.174478
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:12:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.159825
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

			 if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:21) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:22) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:22) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:22) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:22) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.127537
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.17274
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.145138
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:23) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.183416
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.178472
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:24) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.239978
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.363309
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/2442/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.450968
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.477383
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.464491
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.459887
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:25) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.409934
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.337544
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.355425
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.420827
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/2442/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.460407
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.471794
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.457049
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:27) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.215781
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/2442/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:34) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	Mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:35) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	Mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:40) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	MENSAGEM = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:43) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:47) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:03) 
-- CODE:
num = int(input("Digite um numero: ")

if(num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:17) 
-- CODE:
num = int(input("Digite um numero: ")

if (num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:30) 
-- CODE:
num = float(input("Digite um numero: ")

if (num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:31) 
-- CODE:
num = float(input("Digite um numero: ")

if (num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:58) 
-- CODE:
num = float(input("Digite um numero: ")

if (num == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num == 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:14:59) 
-- CODE:
num = float(input("Digite um numero: ")

if (num == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num == 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:06) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:06) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:07) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.131507
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.232542
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:08) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.193426
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:09) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.354586
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:09) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.286225
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:09) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.183105
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:15:09) 
-- CODE:
num = float(input("Digite um numero: ")

if (num //2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.344098
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 3
    if (num //2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:09) 
-- CODE:
num = float(input("Digite um numero: ")

if (num % 2 == 0):
	a = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:20) 
-- CODE:
num = float(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:32) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:42) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:43) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:43) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:47) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:48) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:48) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:48) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:48) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:16:49) 
-- CODE:
num = float(input("Digite um numero: ")

if(num % 2 == 0):
	mensagem = "par"
else:
	mensagem = "impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(num % 2 == 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:17:30) 
-- CODE:
num = float(input("a"))

if (num%2 == 0):
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:08) 
-- CODE:
num = float(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
	else:
		mensagem="burro"
print(mensagem)
-- EXECUTION TIME:
0.247059
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 5
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:09) 
-- CODE:
num = float(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
	else:
		mensagem="burro"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:13) 
-- CODE:
num = float(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:19) 
-- CODE:
num = float(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- EXECUTION TIME:
0.21872
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
burro
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
teurabo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:30) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:37) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- EXECUTION TIME:
0.141885
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
burro
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
teurabo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:47) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(num)
-- EXECUTION TIME:
0.196124
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
55
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
842
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:50) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- EXECUTION TIME:
0.138979
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
burro
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
teurabo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:51) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:59) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:19:03) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:19:16) 
-- CODE:
num = int(input("a"))

if (num%2 == 0):
	mensagem ="teurabo"
else:
		mensagem="burro"
print(mensagem)
-- EXECUTION TIME:
0.180602
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
burro
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
teurabo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:19:59) 
-- CODE:
num = int(input("a"))

if (num % 2 == 0):
	mensagem = "teurabo"
else:
		mensagem = "burro"
print(mensagem)
-- OUTPUT:
burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:20:02) 
-- CODE:
num = int(input("a"))

if (num % 2 == 0):
	mensagem = "teurabo"
else:
		mensagem = "burro"
print(mensagem)
-- EXECUTION TIME:
0.156367
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
burro
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
teurabo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:20:15) 
-- CODE:
num = int(input("a"))

if (num % 2 == 0):
	mensagem = "par"
else:
		mensagem = "ímpar"
print(mensagem)
-- EXECUTION TIME:
0.188723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2442/main.py", line 7, in <module>
    print(mensagem)
UnicodeEncodeError: 'ascii' codec can't encode character '\xed' in position 0: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:20:17) 
-- CODE:
num = int(input("a"))

if (num % 2 == 0):
	mensagem = "par"
else:
		mensagem = "impar"
print(mensagem)
-- EXECUTION TIME:
0.205402
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
